[gd_scene load_steps=17 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://coffee_idle.png" type="Texture" id=2]
[ext_resource path="res://coffee_idle2.png" type="Texture" id=3]
[ext_resource path="res://fall.png" type="Texture" id=4]
[ext_resource path="res://jump.png" type="Texture" id=5]
[ext_resource path="res://walk1.png" type="Texture" id=6]
[ext_resource path="res://walk2.png" type="Texture" id=7]
[ext_resource path="res://walk3.png" type="Texture" id=8]
[ext_resource path="res://Camera2D.gd" type="Script" id=9]
[ext_resource path="res://icon.png" type="Texture" id=10]
[ext_resource path="res://Tiles/Sky.png" type="Texture" id=11]
[ext_resource path="res://Pickup_Coin2.wav" type="AudioStream" id=12]
[ext_resource path="res://Jump.wav" type="AudioStream" id=13]
[ext_resource path="res://hit.wav" type="AudioStream" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 19 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Run"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5.73, 5.11 )
scale = Vector2( 2.06, 1.41 )
shape = SubResource( 2 )

[node name="knockbackbox" type="Area2D" parent="."]
position = Vector2( -5.73, 5.11 )
scale = Vector2( 2.06, 1.41 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="knockbackbox"]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="Camera2D"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -448, -192 )
scale = Vector2( 14.1261, 0.503906 )
z_index = 1
texture = ExtResource( 10 )
centered = false

[node name="Sprite2" type="Sprite" parent="Camera2D"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -480, 160 )
scale = Vector2( 14.563, 0.5 )
z_index = 1
texture = ExtResource( 10 )
centered = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 640, 640 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 0, 5.11 )
texture = ExtResource( 11 )
centered = false

[node name="inframes" type="Timer" parent="."]
process_mode = 0

[node name="coin_pickup" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = -5.0

[node name="jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = -10.542

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
volume_db = -5.0

[node name="text" type="Node2D" parent="."]
position = Vector2( -24, 0 )
z_index = 2

[node name="Score" type="Label" parent="text"]
margin_left = 192.0
margin_top = -178.0
margin_right = 288.0
margin_bottom = -164.0
custom_colors/font_color = Color( 0, 0.180392, 1, 1 )
text = "Score:"

[node name="Time" type="Label" parent="text"]
margin_left = 24.0
margin_top = -178.0
margin_right = 120.0
margin_bottom = -164.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Time:"

[node name="Actual_Score" type="Label" parent="text"]
margin_left = 256.0
margin_top = -178.0
margin_right = 288.0
margin_bottom = -164.0
custom_colors/font_color = Color( 0, 0.109804, 1, 1 )

[node name="Actual_Time" type="Label" parent="text"]
margin_left = 88.0
margin_top = -178.0
margin_right = 120.0
margin_bottom = -164.0
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="Actual_Hearts" type="Label" parent="text"]
anchor_right = 1.0
margin_left = -32.0
margin_top = -178.0
margin_right = 8.0
margin_bottom = -164.0
custom_colors/font_color = Color( 0.219608, 1, 0, 1 )

[node name="Hearts" type="Label" parent="text"]
anchor_right = 1.0
margin_left = -80.07
margin_top = -178.0
margin_right = -34.07
margin_bottom = -164.0
custom_colors/font_color = Color( 0.992157, 0, 1, 1 )
text = "Hearts:"

[node name="Actual_Health" type="Label" parent="text"]
anchor_right = 1.0
margin_left = -238.0
margin_top = -178.0
margin_right = -206.0
margin_bottom = -164.0
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="Health" type="Label" parent="text"]
anchor_right = 1.0
margin_left = -288.0
margin_top = -178.0
margin_right = -238.0
margin_bottom = -164.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Health: "

[node name="thetime" type="Timer" parent="."]
autostart = true
[connection signal="timeout" from="inframes" to="." method="_on_inframes_timeout"]
[connection signal="timeout" from="thetime" to="." method="_on_thetime_timeout"]
